--- a/TekkenApp/TekkenApp/TekkenApp/TekkenApp.csproj
+++ b/TekkenApp/TekkenApp/TekkenApp/TekkenApp.csproj
@@ -5,6 +5,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Sergei_Dragunov.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ApplicationDefinition Include="Sergei_Dragunov.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="2.5.0.122203" />
   </ItemGroup>
 
