--- a/TekkenApp/TekkenApp/TekkenApp.UWP/TekkenApp.UWP.csproj
+++ b/TekkenApp/TekkenApp/TekkenApp.UWP/TekkenApp.UWP.csproj
@@ -104,6 +104,7 @@
     <None Include="TekkenApp.UWP_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="ImgResources\AlisaBosconovitch.png" />
     <Content Include="ImgResources\SergeiDragunov.png" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-100.png" />
