--- a/TekkenApp/TekkenApp/TekkenApp.UWP/TekkenApp.UWP.csproj
+++ b/TekkenApp/TekkenApp/TekkenApp.UWP/TekkenApp.UWP.csproj
@@ -105,6 +105,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="ImgResources\AlisaBosconovitch.png" />
+    <Content Include="ImgResources\AsukaKazama.png" />
     <Content Include="ImgResources\SergeiDragunov.png" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-100.png" />
