--- a/TekkenApp/TekkenApp/TekkenApp.UWP/TekkenApp.UWP.csproj
+++ b/TekkenApp/TekkenApp/TekkenApp.UWP/TekkenApp.UWP.csproj
@@ -106,6 +106,14 @@
   <ItemGroup>
     <Content Include="ImgResources\AlisaBosconovitch.png" />
     <Content Include="ImgResources\AsukaKazama.png" />
+    <Content Include="ImgResources\BryanFury.png" />
+    <Content Include="ImgResources\ClaudioSerafino.png" />
+    <Content Include="ImgResources\DevilJin.png" />
+    <Content Include="ImgResources\EddyGordo.png" />
+    <Content Include="ImgResources\FengWei.png" />
+    <Content Include="ImgResources\Gigas.png" />
+    <Content Include="ImgResources\HeihachiMishima.png" />
+    <Content Include="ImgResources\RobertRichards.png" />
     <Content Include="ImgResources\SergeiDragunov.png" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-100.png" />
