--- a/TekkenApp/TekkenApp/TekkenApp.UWP/TekkenApp.UWP.csproj
+++ b/TekkenApp/TekkenApp/TekkenApp.UWP/TekkenApp.UWP.csproj
@@ -113,8 +113,32 @@
     <Content Include="ImgResources\FengWei.png" />
     <Content Include="ImgResources\Gigas.png" />
     <Content Include="ImgResources\HeihachiMishima.png" />
+    <Content Include="ImgResources\Hwoarang.png" />
+    <Content Include="ImgResources\Jack.png" />
+    <Content Include="ImgResources\JinKazama.png" />
+    <Content Include="ImgResources\JosieRizal.png" />
+    <Content Include="ImgResources\KatarinaAlves.png" />
+    <Content Include="ImgResources\KazumiMishima.png" />
+    <Content Include="ImgResources\Kazuya.png" />
+    <Content Include="ImgResources\King.png" />
+    <Content Include="ImgResources\Kuma.png" />
+    <Content Include="ImgResources\LarsAlexandersson.png" />
+    <Content Include="ImgResources\LawMarshall.png" />
+    <Content Include="ImgResources\LeeChaolan.png" />
+    <Content Include="ImgResources\LeoKliesen.png" />
+    <Content Include="ImgResources\LiliRochefort.png" />
+    <Content Include="ImgResources\LingXiaoxu.png" />
+    <Content Include="ImgResources\LuckyChloe.png" />
+    <Content Include="ImgResources\MiguelCaballeroRojo.png" />
+    <Content Include="ImgResources\NinaWilliams.png" />
+    <Content Include="ImgResources\Panda.png" />
+    <Content Include="ImgResources\PaulPhoenix.png" />
+    <Content Include="ImgResources\Raven.png" />
     <Content Include="ImgResources\RobertRichards.png" />
     <Content Include="ImgResources\SergeiDragunov.png" />
+    <Content Include="ImgResources\Shaheen.png" />
+    <Content Include="ImgResources\SteveFox.png" />
+    <Content Include="ImgResources\Yoshimitsu.png" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-100.png" />
     <Content Include="Assets\LockScreenLogo.scale-125.png" />
