--- a/TekkenApp/TekkenApp/TekkenApp/TekkenApp.csproj
+++ b/TekkenApp/TekkenApp/TekkenApp/TekkenApp.csproj
@@ -29,5 +29,8 @@
     <EmbeddedResource Update="AppMainPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="ProfilePage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
