--- a/TekkenApp/TekkenApp/TekkenApp.UWP/TekkenApp.UWP.csproj
+++ b/TekkenApp/TekkenApp/TekkenApp.UWP/TekkenApp.UWP.csproj
@@ -344,6 +344,9 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Plugin.MediaManager.Forms">
+      <Version>0.4.5</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="2.5.0.122203" />
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.0.1" />
   </ItemGroup>
