--- a/TekkenApp/TekkenApp/TekkenApp/TekkenApp.csproj
+++ b/TekkenApp/TekkenApp/TekkenApp/TekkenApp.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Plugin.MediaManager.Forms" Version="0.4.5" />
+    <PackageReference Include="sqlite-net-pcl" Version="1.4.118" />
     <PackageReference Include="Xamarin.Forms" Version="2.5.0.122203" />
   </ItemGroup>
 
